<resources>
    <string name="app_name">My Tour Guide</string>
    <string name="login_e_mail">E-mail</string>
    <string name="login_password">Password</string>
    <string name="login_text">Login</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="sign_up_full_name">Full Name</string>
    <string name="sign_up_e_mail">E-mail</string>
    <string name="sign_up_username">Username</string>
    <string name="sign_up_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="sign_up_login_here">Already have an account? <u>Login</u></string>
    <string name="btn_login">Login</string>
    <string name="login_sign_up_now">Not a member? Sign Up now</string>
    <string name="sign_up_password_error">Please enter password</string>
    <string name="sign_up_password_rule">Password should be</string>
    <string name="sign_up_rule_1">At least 8 characters</string>
    <string name="sign_up_rule_2">Minimum one uppercase</string>
    <string name="sign_up_rule_3">Minimum one number</string>
    <string name="sign_up_rule_4">Minimum one symbol</string>
    <string name="main_tv_welcome">Welcome</string>
    <string name="login_forgot_pass">Forgot Password?</string>
    <string name="rest_dialog_tv_title">Reset Password</string>
    <string name="tv_rest_dialog_infoText">Please enter your registered E-mail to receive a reset link:</string>
    <string name="rest_dialog_btn_Cancel">Cancel</string>
    <string name="rest_dialog_btn_Ok">OK</string>
    <string name="confirm_dialog_tv_title">Account Created &#128578;</string>
    <string name="confirm_dialog_tv_infoText">Verification Email has been sent, Please check your inbox</string>
    <string name="confirm_dialog_btn_Ok">OK</string>
    <string name="verification_dialog_tv_title">E-mail not verified &#128577;</string>
    <string name="verification_dialog_btn_resend">Resend Link</string>
    <string name="verification_dialog_tv_infoText">Oops ... You did not verify your email address !</string>
    <string name="wrong_dialog_tv_title">Wrong Password &#128577;</string>
    <string name="wrong_dialog_tv_infoText">You have entered a wrong password, please try again or reset your password</string>
    <string name="wrong_dialog_btn_Ok">Try again</string>
    <string name="wrong_dialog_btn_rest">Reset password</string>
    <string name="verification_dialog_btn_Ok">OK</string>
    <string name="permission_tv_infoText">My Tour Guide needs permission to access device location, to provide required services. Please allow the permission</string>
    <string name="permission_tv_title">Permission Request</string>
    <string name="permission_btn_grant">Grant Permission</string>
    <string name="title_activity_map">MapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_acc_dialog_tv_title">Not registered? &#128551;</string>
    <string name="no_acc_dialog_tv_infoText">No account found with that email address, would you like to sign up?</string>
    <string name="no_acc_dialog_btn_no">NO</string>
    <string name="no_acc_dialog_btn_yes">YES</string>
    <string name="btn_map">Find places to visit</string>
    <string name="exist_dialog_tv_title">Already registered? &#129300;</string>
    <string name="exist_dialog_tv_infoText">It looks like this email address is already registered, Would you like to try to login instead?</string>
    <string name="exist_dialog_btn_no">NO</string>
    <string name="exist_dialog_btn_yes">Yes</string>
    <string name="acc_type_dialog_tv_title">Please choose account type</string>
    <string name="acc_type_dialog_btn_guide">Guide</string>
    <string name="acc_type_dialog_btn_tourist">Tourist</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tv_nav_header">My Tour Guide</string>
    <string name="edit_profile_et_full_name">Your Name</string>
    <string name="edit_profile_et_e_mail">Your Email Address</string>
    <string name="edit_profile_et_phone">Your Phone Number</string>
    <string name="edit_profile_btn_save">Save</string>
    <string name="edit_profile_btn_cancel">Cancel</string>
    <string name="tv_profile_full_name">Full Name</string>
    <string name="tv_profile_user_full_name">Your Name</string>
    <string name="tv_profile_email">Email</string>
    <string name="tv_profile_user_email">Your Email Address</string>
    <string name="tv_profile_phone">Phone</string>
    <string name="tv_profile_user_phone">Phone Number</string>
    <string name="btn_profile_edit_profile">Edit Profile</string>
    <string name="btn_profile_rest_pass">Reset Password</string>
    <string name="btn_profile_logout">Logout</string>
    <string name="btn_profile_change_profile_image">Change profile picture</string>
    <string name="btn_profile_verify_email">Verify Now</string>
    <string name="tv_profile_verifyMsg">Email Not Verified !</string>
    <string name="tv_profile_username">Username</string>
    <string name="tv_profile_user_name_user">Your Username</string>
    <string name="changes_saved_dialog_tv_title">All changes saved &#128578;</string>
    <string name="changes_saved_dialog_btn_ok">Thank you</string>
    <string name="changes_saved_dialog_tv_infoText">See everything you did right there, its all perfectly saved</string>
    <string name="guide_reg_et_dob">Date of birth</string>
    <string name="guide_reg_et_phone">Phone number</string>
    <string name="guide_reg_tv_upload">Please upload your tourist guide identification card</string>
    <string name="guide_reg_btn_upload">Upload tour guide card</string>
    <string name="guide_reg_btn_Signup">Finish signing up</string>
    <string name="guide_reg_dialog_tv_infoText">Oh nice we have one more guide, Please allow 1-2 days to let the support team confirm your information</string>
    <string name="guide_reg_dialog_btn_ok">OK</string>
    <string name="guide_reg_dialog_tv_title">Account under review</string>
    <string name="nav_header_tv_date">Date</string>
    <string name="fav_list_tv_place_name">Place Name</string>
    <string name="fav_list_tv_place_address">Place Address</string>
    <string name="favorite_tv_default">You did not favorite anything yet buddy &#128578;</string>
    <string name="del_fav_dialog_tv_title">Delete Place</string>
    <string name="del_fav_dialog_tv_infoText">Are you sure you want to delete this place ?</string>
    <string name="del_fav_dialog_btn_No">NO</string>
    <string name="del_fav_dialog_btn_Yes">YES</string>
    <string name="add_tour_dialog_tv_title">ADD A NEW TOUR</string>
    <string name="add_tour_dialog_tv_infoText">Please give your new tour a name</string>
    <string name="add_tour_dialog_til_tourName">New Tour</string>
    <string name="add_tour_dialog_btn_Cancel">CANCEL</string>
    <string name="add_tour_dialog_btn_Ok">LOOKS GOOD!</string>
    <string name="tour_list_tv_place_name">Tour list title</string>
    <string name="tour_list_tv_place">Place 1</string>
    <string name="add_place_dialog_tv_infoText">Please choose a tour list</string>
    <string name="del_list_dialog_tv_title">Delete List</string>
    <string name="del_list_dialog_tv_infoText">Are you sure you want to delete this list ?</string>
    <string name="func_tour_dialog_tv_title">Send this list to the guides !</string>
    <string name="func_tour_dialog_tv_infoText">Great you are about to send this list to the guides, please select a tour guide from the list below</string>
    <string name="func_tour_dialog_btn_cancel">Cancel</string>
    <string name="func_tour_dialog_btn_confirm">Confirm</string>
    <string name="tour_list_tv_sender">Sender</string>
    <string name="item_guide_dialog_tv_title">Here is what we got about this list</string>
    <string name="item_guide_dialog_tv_sender_name">Sender name:</string>
    <string name="item_guide_dialog_tv_sender_phone">Phone NO:</string>
    <string name="item_guide_dialog_tv_info">Would you like to accept this tour ?</string>
    <string name="item_guide_dialog_btn_no">NO</string>
    <string name="item_guide_dialog_btn_yes">YES</string>
    <string name="item_guide_dialog_btn_cancel">CANCEL</string>
    <string name="acc_type_dialog_tv_reg">Register</string>
</resources>