<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/item_guide_dialog_img"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_info"
        />

    <TextView
        android:id="@+id/item_guide_dialog_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_guide_dialog_tv_title"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/item_guide_dialog_img"
        android:gravity="center"
        android:fontFamily="@font/poppinsbold"
        android:textSize="23sp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/item_guide_dialog_tv_sender_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_guide_dialog_tv_sender_name"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/item_guide_dialog_tv_title"
        android:fontFamily="@font/poppinsmedium"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/item_guide_dialog_tv_sender_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_guide_dialog_tv_sender_phone"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/item_guide_dialog_tv_sender_name"
        android:fontFamily="@font/poppinsmedium"
        android:textSize="15sp"

        />

    <TextView
        android:id="@+id/item_guide_dialog_tv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_guide_dialog_tv_info"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/item_guide_dialog_tv_sender_phone"
        android:fontFamily="@font/poppinsmedium"
        android:textSize="15sp"
        android:visibility="gone"

        />

    <LinearLayout
        android:id="@+id/item_guide_dialog_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/item_guide_dialog_tv_info"
        >

        <Button
            android:id="@+id/item_guide_dialog_btn_cancel"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_guide_dialog_btn_cancel"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/poppinsmedium"
            android:gravity="center|bottom"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/item_guide_dialog_btn_no"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_guide_dialog_btn_no"
            android:layout_marginEnd="10sp"
            android:layout_marginStart="20sp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/poppinsmedium"
            android:gravity="center|bottom"
            android:textAllCaps="false"
            android:visibility="gone"

            />

        <Button
            android:id="@+id/item_guide_dialog_btn_yes"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/poppinsmedium"
            android:gravity="center|bottom"
            android:text="@string/item_guide_dialog_btn_yes"
            android:visibility="gone"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>