<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/acc_type_dialog_tv_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/acc_type_dialog_tv_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:fontFamily="@font/poppinsbold"
        android:textSize="25sp"
        android:textColor="@color/quantum_googred"/>

    <TextView
        android:id="@+id/acc_type_dialog_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acc_type_dialog_tv_title"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/acc_type_dialog_tv_reg"
        android:gravity="center"
        android:fontFamily="@font/poppinsbold"
        android:textSize="25sp"
        android:textColor="@color/colorAccent"/>


    <LinearLayout
        android:id="@+id/acc_type_dialog_Layout"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/acc_type_dialog_tv_title">

        <Button
            android:id="@+id/acc_type_dialog_btn_guide"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/poppinsmedium"
            android:gravity="center"
            android:text="@string/acc_type_dialog_btn_guide"
            android:drawableTop="@drawable/ic_tour_guide"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/acc_type_dialog_btn_tourist"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/poppinsmedium"
            android:gravity="center"
            android:text="@string/acc_type_dialog_btn_tourist"
            android:drawableTop="@drawable/ic_tourist"
            android:textAllCaps="false" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

