<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/add_tour_dialog_img"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_tour"
        />

    <TextView
        android:id="@+id/add_tour_dialog_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_tour_dialog_tv_title"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/add_tour_dialog_img"
        android:gravity="center"
        android:fontFamily="@font/poppinsbold"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/add_tour_dialog_tv_infoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/add_tour_dialog_tv_infoText"
        app:layout_constraintTop_toBottomOf="@+id/add_tour_dialog_tv_title"
        android:gravity="center"
        android:textSize="15sp"
        android:fontFamily="@font/poppinsmedium" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_tour_dialog_til_tourName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:hint="@string/add_tour_dialog_til_tourName"
        app:layout_constraintTop_toBottomOf="@+id/add_tour_dialog_tv_infoText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_tour_dialog_tie_tourName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:inputType="text"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/add_tour_dialog_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/add_tour_dialog_til_tourName">

        <Button
            android:id="@+id/add_tour_dialog_btn_Cancel"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_tour_dialog_btn_Cancel"
            android:layout_marginEnd="40sp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/poppinsmedium"
            android:gravity="center|bottom"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/add_tour_dialog_btn_Ok"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40sp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/poppinsmedium"
            android:gravity="center|bottom"
            android:text="@string/add_tour_dialog_btn_Ok"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

