<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/wrong_dialog_img"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_wrong"
        />

    <TextView
        android:id="@+id/wrong_dialog_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wrong_dialog_tv_title"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/wrong_dialog_img"
        android:gravity="center"
        android:fontFamily="@font/poppinsbold"
        android:textSize="25sp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/wrong_dialog_tv_infoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/wrong_dialog_tv_infoText"
        app:layout_constraintTop_toBottomOf="@+id/wrong_dialog_tv_title"
        android:gravity="center"
        android:textSize="17sp"
        android:fontFamily="@font/poppinsmedium" />

    <LinearLayout
        android:id="@+id/wrong_dialog_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/wrong_dialog_tv_infoText">

    <Button
        android:id="@+id/wrong_dialog_btn_rest"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20sp"
        android:text="@string/wrong_dialog_btn_rest"
        android:fontFamily="@font/poppinsmedium"
        android:backgroundTint="@color/colorAccent"
        android:gravity="center|bottom"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/wrong_dialog_btn_again"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:fontFamily="@font/poppinsmedium"
        android:backgroundTint="@color/colorAccent"
        android:gravity="center|bottom"
        android:text="@string/wrong_dialog_btn_Ok"
        android:textAllCaps="false"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

