<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PermissionsActivity"
    android:padding="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/permission_img"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:src="@drawable/ic_location" />

        <TextView
            android:id="@+id/permission_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/permission_tv_title"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/permission_tv_infoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:fontFamily="@font/poppinsmedium"
            android:layout_marginTop="36dp"
            android:text="@string/permission_tv_infoText"/>

    </LinearLayout>

    <Button
        android:id="@+id/permission_btn_grant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/permission_btn_grant"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/poppinsmedium"
        android:gravity="center|bottom"
        app:layout_constraintBottom_toBottomOf="parent" />

</RelativeLayout>